# RealShell

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: StmToolchain.cmake  fatfs.cmake  freeRtos.cmake  pico-sdk.cmake  rp2040.cmake
config/: FreeRTOSConfig.h  ffconf.h
inc/: fatfs.h  ff_ram_driver.h  ff_sd_driver.h  ramDiskDriver.h  rs_init.h  rs_ls.h  rs_tasks.h  rs_template.h
src/: ff_ram_driver.c  ff_sd_driver.c  main.c  ramDiskDriver.c  rs_init.c  rs_ls.c  rs_main.c  rs_tasks.c  rs_template.c  startup.c  syscalls.c
utils/: stm_dev.resc  watcher
